@@ -71,6 +71,10 @@
 
   /** Timeout in seconds, for query methods */
   unsigned queryTimeoutSec;
+  
+  /** is executing */
+  NSUInteger *busyCount;
+  NSRecursiveLock *lockBusy;
 }
 
 + (NSArray *)fieldsByParsingQuery:(NSString *)query;
@@ -89,8 +93,6 @@
 - (void)queryIdentify :(NSString *)queryString with: (NSArray *)identifiers queryAll:(BOOL)all fromArray:(NSArray *)fromArray toArray:(NSMutableArray *)outArray withBatchSize:(int)batchSize progressMonitor:(id<DBProgressProtocol>)p;
 - (NSMutableArray *)create :(NSString *)objectName fromArray:(NSMutableArray *)objects progressMonitor:(id<DBProgressProtocol>)p;
 - (NSMutableArray *)update :(NSString *)objectName fromArray:(NSMutableArray *)objects progressMonitor:(id<DBProgressProtocol>)p;
-
-/** Delete the contents of array, which can be either strings of IDs or DBSObjects */
 - (NSMutableArray *)delete :(NSArray *)array progressMonitor:(id<DBProgressProtocol>)p;
 
 - (NSArray *)describeGlobal;
@@ -109,6 +111,8 @@
 - (void)setQueryTimeout:(unsigned)sec;
 - (unsigned)standardTimeout;
 - (unsigned)queryTimeout;
+
+- (BOOL)isBusy;
 
 @end
 
